Remove NoInjectBeanDefinition and improve/refactor RuntimeBeanDefinition